--- a/Omniplayer/Omniplayer.csproj
+++ b/Omniplayer/Omniplayer.csproj
@@ -120,64 +120,104 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Audio\microphone-block.png" />
+    <Resource Include="Resources\Icons\Audio\microphone-block.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Audio\micrphone-play.png" />
+    <Resource Include="Resources\Icons\Audio\micrphone-play.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Audio\mute.png" />
+    <Resource Include="Resources\Icons\Audio\mute.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Audio\no-audio.png" />
+    <Resource Include="Resources\Icons\Audio\no-audio.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Audio\volume-high.png" />
+    <Resource Include="Resources\Icons\Audio\volume-high.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Audio\volume-low.png" />
+    <Resource Include="Resources\Icons\Audio\volume-low.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Audio\volume-middle.png" />
+    <Resource Include="Resources\Icons\Audio\volume-middle.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\eject.png" />
+    <Resource Include="Resources\Icons\Controls\eject.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\fast-forward.png" />
+    <Resource Include="Resources\Icons\Controls\fast-forward.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\next.png" />
+    <Resource Include="Resources\Icons\Controls\next.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\pause.png" />
+    <Resource Include="Resources\Icons\Controls\pause.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\play.png" />
+    <Resource Include="Resources\Icons\Controls\play.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\prev.png" />
+    <Resource Include="Resources\Icons\Controls\prev.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\record.png" />
+    <Resource Include="Resources\Icons\Controls\record.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\repeat-one.png" />
+    <Resource Include="Resources\Icons\Controls\repeat-one.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\repeat.png" />
+    <Resource Include="Resources\Icons\Controls\repeat.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\resume.png" />
+    <Resource Include="Resources\Icons\Controls\resume.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\rewind.png" />
+    <Resource Include="Resources\Icons\Controls\rewind.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\shuffle.png" />
+    <Resource Include="Resources\Icons\Controls\shuffle.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Controls\stop.png" />
+    <Resource Include="Resources\Icons\Controls\stop.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
