--- a/PlayerLibrary/PlayerLibrary.csproj
+++ b/PlayerLibrary/PlayerLibrary.csproj
@@ -79,6 +79,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Player\EventHandlers.cs" />
     <Compile Include="Player\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structures\Playlists\Playlist.cs" />
